add file count and directory count

--- a/server/wwwroot/index.html
+++ b/server/wwwroot/index.html
@@ -78,6 +78,7 @@
         </div>
         <div id="breadcrumb"></div>
         <div id="backLink"></div>
+        <div id="directoryCounts"></div>
         <div id="error"></div>
         <div id="loading" aria-busy="false">
             <p>Loading...</p>
